--- a/src/main/webapp/addEditUser.xhtml
+++ b/src/main/webapp/addEditUser.xhtml
@@ -120,11 +120,12 @@
                                 </b:column>
                                 <b:column span="3">
                                     <h:inputText id="postcode" label="Postcode" value="#{clientController.editingClient.postcode}">
-                                        <f:validateRegex pattern="^([A-PR-UWYZ0-9][A-HK-Y0-9][AEHMNPRTVXY0-9]?[ABEHMNPRVWXY0-9]? {1,2}[0-9][ABD-HJLN-UW-Z]{2}|GIR 0AA)$" />
+                                        <f:validator validatorId="mcknighte.PostcodeValidator" />
+                                        <f:attribute name="country" value="#{param['newUserForm:country']}" />
                                     </h:inputText>
                                 </b:column>
                                 <b:column span="5">
-                                    <b:message for="postcode" show-detail="false"/>
+                                    <b:message for="postcode"/>
                                 </b:column>
                             </b:row>
                             <b:row>
