New: Work started on create new appointment page

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -23,7 +23,7 @@
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" value="(Coming Soon) Appointments" disabled="true"/>
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointments()}" value="Appointments"/>
                             </b:column>
                         </b:row>
                     </h:form>
