New: Functionality to edit appointments.

--- a/src/main/webapp/appointments.xhtml
+++ b/src/main/webapp/appointments.xhtml
@@ -26,7 +26,7 @@
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToBrowseAppointments()}" disabled="true" value="Browse appointments" />
+                                <h:commandButton styleClass="navButton" action="#{appointmentController.goToBrowseAppointments()}" disabled="true" value="Browse appointments" />
                             </b:column>
                         </b:row>
                     </h:form>
