--- a/src/main/webapp/browseAppointments.xhtml
+++ b/src/main/webapp/browseAppointments.xhtml
@@ -23,7 +23,7 @@
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByDate()}" value="Appointments by date" disabled="true" />
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByDay()}" value="Appointments by day" />
                             </b:column>
                         </b:row>
                         <b:row>
