--- a/src/main/webapp/browseAppointments.xhtml
+++ b/src/main/webapp/browseAppointments.xhtml
@@ -18,17 +18,17 @@
                     <h:form>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByUser()}" value="Appointments by user" />
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByUser()}" value="Appointments by user"/>
                             </b:column>
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByDay()}" value="Appointments by day" />
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsByDay()}" value="Appointments by day"/>
                             </b:column>
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsCalendar()}" value="Appointments calendar" disabled="true" />
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAppointmentsCalendar()}" value="Appointments calendar"/>
                             </b:column>
                         </b:row>
                     </h:form>
