Update: Show the creator of an appointment on the view appointment page

--- a/src/main/webapp/viewAppointment.xhtml
+++ b/src/main/webapp/viewAppointment.xhtml
@@ -22,6 +22,14 @@
                         <h:form id="viewAppointmentForm">
                             <b:row>
                                 <b:column offset="1" span="2">
+                                    <h:outputLabel for="creator">Creator</h:outputLabel>
+                                </b:column>
+                                <b:column span="3">
+                                    <h:outputText id="creator" value="#{appointmentController.editingAppointment.creator.username}"/>
+                                </b:column>
+                            </b:row>
+                            <b:row>
+                                <b:column offset="1" span="2">
                                     <h:outputLabel for="start">Start</h:outputLabel>
                                 </b:column>
                                 <b:column span="3">
