Fix: Display creator as "Owner" not "Creator"

--- a/src/main/webapp/viewAppointment.xhtml
+++ b/src/main/webapp/viewAppointment.xhtml
@@ -22,7 +22,7 @@
                         <h:form id="viewAppointmentForm">
                             <b:row>
                                 <b:column offset="1" span="2">
-                                    <h:outputLabel for="creator">Creator</h:outputLabel>
+                                    <h:outputLabel for="creator">Owner</h:outputLabel>
                                 </b:column>
                                 <b:column span="3">
                                     <h:outputText id="creator" value="#{appointmentController.editingAppointment.creator.username}"/>
