--- a/src/main/webapp/viewAppointment.xhtml
+++ b/src/main/webapp/viewAppointment.xhtml
@@ -49,7 +49,7 @@
                                     <h:outputLabel for="description">Description</h:outputLabel>
                                 </b:column>
                                 <b:column span="3">
-                                    <h:inputText id="description" value="#{appointmentController.editingAppointment.description}"/>
+                                    <h:outputText id="description" value="#{appointmentController.editingAppointment.description}"/>
                                 </b:column>
                             </b:row>
                             <b:row>
