--- a/src/main/webapp/appointment/appointmentsCalendar.xhtml
+++ b/src/main/webapp/appointment/appointmentsCalendar.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
-        <ui:composition template="./resources/template/commonLayout.xhtml">
+        <ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h:form>
                     <h:commandLink action="browseAppointments"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
