--- a/src/main/webapp/user/addEditUser.xhtml
+++ b/src/main/webapp/user/addEditUser.xhtml
@@ -8,7 +8,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:body>
 
-    	<ui:composition template="./resources/template/commonLayout.xhtml">
+    	<ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h:form rendered="#{clientController.editingClient.id eq null}">
                     <h:commandLink action="users"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
