--- a/src/main/webapp/appointment/appointmentsByUser.xhtml
+++ b/src/main/webapp/appointment/appointmentsByUser.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
-    	<ui:composition template="./resources/template/commonLayout.xhtml">
+    	<ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <!-- Fixes problem of AJAX updated buttons not working the first time they're clicked -->
                 <h:outputScript name="js/ajaxFix.js" target="head" />
