--- a/src/main/webapp/appointment/viewAppointment.xhtml
+++ b/src/main/webapp/appointment/viewAppointment.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
 
-    	<ui:composition template="./resources/template/commonLayout.xhtml">
+    	<ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h:form>
                     <h:commandLink action="browseAppointments"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
