--- a/src/main/webapp/user/users.xhtml
+++ b/src/main/webapp/user/users.xhtml
@@ -7,26 +7,26 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
 
-    	<ui:composition template="./resources/template/commonLayout.xhtml">
+    	<ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h:form>
-                    <h:commandLink action="welcome"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
+                    <h:commandLink action="/welcome"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
                 </h:form>
-                <h1>Appointments</h1>
+                <h1>Users</h1>
             </ui:define>
             <ui:define name="content">
                     <h:form>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToCreateAppointment()}" value="Create new appointment" immediate="true">
+                                <h:commandButton styleClass="navButton" action="#{startController.goToAddUser()}" value="Add new user" immediate="true">
                                     <!-- OscarSan. (2012). JSF - How to pass parameters from one controller to another controller action events? Retrieved from http://stackoverflow.com/questions/12040870/jsf-how-to-pass-parameters-from-one-controller-to-another-controller-action-ev -->
-                                    <f:setPropertyActionListener target="#{appointmentController.editingAppointment}" value="#{appointmentController.clearEditingAppointment()}" />
+                                    <f:setPropertyActionListener target="#{clientController.editingClient}" value="#{clientController.clearEditingClient()}" />
                                 </h:commandButton>
                             </b:column>
                         </b:row>
                         <b:row>
                             <b:column span="12">
-                                <h:commandButton styleClass="navButton" action="#{startController.goToBrowseAppointments()}" value="Browse appointments" />
+                                <h:commandButton styleClass="navButton" action="#{startController.goToBrowseUsers()}" value="Browse users" />
                             </b:column>
                         </b:row>
                     </h:form>
