--- a/src/main/webapp/user/viewUser.xhtml
+++ b/src/main/webapp/user/viewUser.xhtml
@@ -7,7 +7,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
 
-    	<ui:composition template="./resources/template/commonLayout.xhtml">
+    	<ui:composition template="../resources/template/commonLayout.xhtml">
             <ui:define name="header">
                 <h:form>
                     <h:commandLink action="browseUsers"><b:icon name="glyphicon-arrow-up" /></h:commandLink>
