Fix: Check if a user has appointments before trying to delete them

--- a/src/main/webapp/appointment/appointmentsCalendar.xhtml
+++ b/src/main/webapp/appointment/appointmentsCalendar.xhtml
@@ -20,7 +20,7 @@
                             <b:column offset="1" span="10">
                                 <h2>
                                     <h:outputText value="#{time.time}">
-                                        <f:convertDateTime pattern = "MMMM" />
+                                        <f:convertDateTime pattern = "MMMM yyyy" />
                                     </h:outputText>
                                 </h2>
                                 <b:row>
